# nemo-easytag

./: .gitignore  README.md  meson.build  meson_install_schemas.py
.github/workflows/: codeql-analysis.yml
data/: meson.build  org.nemo.extensions.easytag.metainfo.xml
po/: LINGUAS  POTFILES.in  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  hr.po  hu.po  id.po  ja.po  ko.po  lt.po  nb.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: meson.build  nemo-easytag.c
